[FIXED] certain browsers had map appearing off screen

--- a/css/map_style.css
+++ b/css/map_style.css
@@ -5,7 +5,6 @@ body {
   font:16px/1.5 Lato, "Helvetica Neue", Helvetica, Arial, sans-serif;
   color:#666666;
   font-weight:400;
-  display: flex;
 }
 
 h1 {
